--- a/farming-sim/Makefile
+++ b/farming-sim/Makefile
@@ -1,2 +1,2 @@
 makeproject:
-	g++ Farm.cpp Farmer.cpp Farm_goods.cpp Animals.cpp Crops.cpp Cows.cpp Pigs.cpp Sheeps.cpp Corn.cpp Soybean.cpp Wheat.cpp Main.cpp Instructions.cpp -o project_farm
+	g++ Farm.cpp Farmer.cpp Farm_goods.cpp Animals.cpp Crops.cpp Cows.cpp Pigs.cpp Sheeps.cpp Corn.cpp Soybean.cpp Wheat.cpp Main.cpp -o project_farm
